--- a/HTML/Basic.html
+++ b/HTML/Basic.html
@@ -1,13 +1,13 @@
+<!DOCTYPE html>
 <html>
     <header>
         <!--Today we are on 19th March, 2024-->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Basic</title>
+        <title>My First HTML Page</title>
     </header>
     <body>
-        <h1>My First HTML Page</h1>
-        <p>This is the Home page of HTML To cover HTML Basics</p>
+      <h1>Hello World!</h1>
+      <p>This is my first HTML page.</p>
     </body>
-    <footer></footer>
 </html>
